<resources>
    <string name="app_name">BienestAR providers</string>
    <string name="default_product_description">Product</string>
    <string name="default_image_product_description">Product image description</string>
    <string name="bienestar_logo">BienestAR logo</string>
    <string name="bienestar_brand">BienestAR \nProviders</string>
    <string name="assistance">Assistance</string>
    <string name="consultancy">Consultancy</string>
    <string name="meals">Meals</string>
    <string name="pharmacy">Farmacy</string>
    <string name="medical_speciality_header">Specialty</string>
    <string name="specialist_search_header">Search</string>
    <string name="medical_speciality_search_hint">Specialty</string>
    <string name="meals_header">Meals</string>
    <string name="specialist_profile_picture_desc">Specialist profile picture</string>
    <string name="specialist_name_default">Specialist name</string>
    <string name="specialist_description_default">Specialist description</string>
    <string name="meal_description_default">Las Flores 567, CABA</string>
    <string name="meals_order_header">Your order</string>
    <string name="pharmacy_header">Pharmacy</string>
    <string name="consultancy_appointments">Pending appointments</string>
    <string name="meals_to_retrieve">Pending meals</string>
    <string name="consultancy_prescriptions">Prescription submission</string>
    <string name="pharmacy_search_hint">Buscar productos de farmacia y más...</string>
    <string name="asistir">Assist</string>
    <string name="bienvenido_doctor_1">Bienvenido doctor 1</string>
    <string name="bienestar">BienestAR</string>
    <string name="proveedores">Providers</string>
    <string name="sharedPreferences">Bienestar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preference_file_key">BIENESTAR</string>
    <string name="shared_preferences_file">Bienestar</string>
    <string name="username">Username</string>
    <string name="sing_in">SING IN</string>
    <string name="sing_up">SING UP</string>
    <string name="todo">TODO</string>
    <string name="bienestar_providers">BienestAR Providers</string>
    <string name="textview">TextView</string>
    <string name="escriba_aqu_la_receta_para_el_paciente">Write in this textbox the prescription for the patient</string>
    <string name="enviar">SEND</string>
    <string name="new_to_bienestar_providers">New to BienestAR providers?</string>
</resources>
